task5.add files js

--- a/UI/main.html
+++ b/UI/main.html
@@ -26,9 +26,8 @@
                     <img src="images/logo.svg" class="logo" alt="chitchat">
                 </a>
 
-                <div class="header_content">
-                    <div class="header_user">Ирина</div>
-                    <button class="btn_blue" type="button_exit">Выйти</button>
+                <div id="headerview" class="header_content">
+
                 </div>
             </div>
         </header>
@@ -58,23 +57,17 @@
                 <section class="feed">
 
                     <nav class="filter_items">
+
                         <form class="filtration filter_name">
                             <button class="filter_confirm selector_name">Применить</button>
                         </form>
 
-
                         <form class="filtration filter_name">
                             <button class="selector_name">Имя</button>
-                            <ul class="list_filter">
-                                <li class="list_item"><a class="item_filtration" href="#">Автор 1</a></li>
-                                <hr>
-                                <li class="list_item"><a class="item_filtration" href="#">Автор 2</a></li>
-                                <hr>
-                                <li class="list_item"><a class="item_filtration" href="#">Автор 3</a></li>
-                                <hr>
-                                <li class="list_item"><a class="item_filtration" href="#">Автор 4</a></li>
+                            <ul id="filter" class="list_filter">
                             </ul>
                         </form>
+
 
 
                         <form class="filtration filter_date">
@@ -85,7 +78,6 @@
                                 </li>
                                 <hr>
                                 <li>До:<input class="date_input" type="date" value="2022-2-22" /></li>
-
                             </ul>
                         </form>
 
@@ -94,7 +86,8 @@
                             <button class="selector_name">Текст
                             </button>
                             <ul class="list_filter">
-                                <li><input class="date_input" type="text" name="text" placeholder="Введите текст"></li>
+                                <li><input class="date_input" type="text" name="text" placeholder="Введите текст">
+                                </li>
                                 <li><input class="date_input" type="checkbox" /></li>
                             </ul>
                         </form>
@@ -104,6 +97,11 @@
                             <button class="selector_name selected">Хэштег
                                 <img class="reset" src="images/x.svg" alt="X">
                             </button>
+                            <!-- <ul class="list_filter">
+                                    <li><input class="date_input" type="text" name="text" placeholder="Введите тэг">
+                                    </li>
+                                    <li><input class="date_input" type="checkbox" /></li>
+                                </ul> -->
                         </form>
 
 
@@ -113,321 +111,11 @@
 
                     <!-- -------- twit -->
 
-                    <article class="twit">
 
+                    <div id="tweet">
 
-                        <div class="user_info">
-                            <h1 class="user_name">Ирина</h1>
-                            <span class="user_check">(Вы)</span>
-                        </div>
 
-                        <div class="twit_date">18.02.2022 17:46</div>
-                        <p>В рамках спецификации современных стандартов, непосредственные участники технического
-                            прогресса
-                            ассоциативно распределены по отраслям.<span class="hashtag">#datamola2022</span></p>
-
-
-                        <div class="twit_footer">
-
-                            <a href="#">
-                                <img src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">22</span>
-
-                            <div class="twit_edit">
-                                <a class="correct" href="#">
-                                    <img src="images/edit.svg" alt="edit">
-                                </a>
-
-                                <a href="#">
-                                    <img src="images/delete.svg" alt="delete">
-                                </a>
-                            </div>
-
-                        </div>
-
-                    </article>
-
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-                        <div class="user_info">
-                            <h1 class="user_name">Артем</h1>
-                        </div>
-
-                        <div class="twit_date">18.02.2022 15:23</div>
-                        <p>Ясность нашей позиции очевидна: базовый вектор развития <span>#development</span>
-                            позволяет оценить
-                            значение поэтапного и
-                            последовательного развития общества.</p>
-
-
-
-                        <div class="twit_footer">
-                            <a href="#">
-                                <img src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">14</span>
-                        </div>
-
-                    </article>
-
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-
-
-                        <div class="user_info">
-                            <h1 class="user_name">Евгений</h1>
-                        </div>
-
-
-                        <div class="twit_date">18.02.2022 12:42</div>
-                        <p>Вот вам яркий пример современных тенденций - семантический разбор внешних
-                            противодействий
-                            обеспечивает широкому кругу (специалистов) участие в формировании инновационных
-                            методов управления
-                            процессами.<span>#datamola2022</span></p>
-
-
-                        <div class="twit_footer">
-                            <a href="#">
-                                <img src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">7</span>
-
-                        </div>
-
-                    </article>
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-
-
-                        <div class="user_info">
-                            <h1 class="user_name">Gleb</h1>
-                        </div>
-
-
-                        <div class="twit_date">18.02.2022 14:01</div>
-                        <p>Ясность нашей позиции очевидна: базовый вектор развития <span>#development</span>
-                            позволяет оценить
-                            значение поэтапного и
-                            последовательного развития общества.</p>
-
-
-
-                        <div class="twit_footer">
-
-
-                            <a href="#">
-                                <img src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">4</span>
-
-                        </div>
-
-                    </article>
-
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-
-
-                        <div class="user_info">
-                            <h1 class="user_name">Виктория</h1>
-                        </div>
-
-
-                        <div class="twit_date">18.02.2022 14:00</div>
-                        <p>А ещё стремящиеся вытеснить традиционное производство, нанотехнологии, превозмогая
-                            сложившуюся
-                            непростую экономическую ситуацию, объединены в целые кластеры себе
-                            подобных.<span>#производство</span>
-                        </p>
-
-
-
-                        <div class="twit_footer">
-
-
-                            <a href="#">
-                                <img src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">6</span>
-
-
-                        </div>
-
-                    </article>
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-
-
-                        <div class="user_info">
-                            <h1 class="user_name">Артем</h1>
-                        </div>
-
-
-                        <div class="twit_date">18.02.2022 12:33</div>
-                        <p>А также предприниматели в сети интернет, вне зависимости от их уровня, должны быть
-                            обнародованы.
-                            Прежде всего, глубокий уровень погружения, в своём классическом представлении,
-                            допускает внедрение
-                            экспериментов, поражающих по своей масштабности и грандиозности.</p>
-
-
-
-                        <div class="twit_footer">
-
-                            <a href="#">
-                                <img src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">4</span>
-                        </div>
-
-                    </article>
-
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-
-
-                        <div class="user_info">
-                            <h1 class="user_name">Евгений</h1>
-                        </div>
-
-
-                        <div class="twit_date">17.02.2022 23:49</div>
-                        <p>Каждый из нас понимает очевидную вещь: современная методология разработки требует от
-                            нас анализа
-                            прогресса профессионального сообщества.</p>
-
-
-
-                        <div class="twit_footer">
-
-                            <a>
-                                <img class="no_comments" src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">0</span>
-
-
-                        </div>
-
-                    </article>
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-
-
-                        <div class="user_info">
-                            <h1 class="user_name">Артем</h1>
-                        </div>
-
-
-                        <div class="twit_date">17.02.2022 19:12</div>
-                        <p>Задача организации, в особенности же перспективное планирование не даёт нам иного
-                            выбора, кроме
-                            определения экспериментов, поражающих по своей масштабности и грандиозности. Таким
-                            образом, укрепление
-                            и развитие внутренней структуры предполагает независимые способы реализации новых
-                            предложений.</p>
-
-
-
-                        <div class="twit_footer">
-
-
-                            <a href="#">
-                                <img src="images/chat.svg" alt="chat">
-                            </a>
-                            <span class="twit_comment_number">4</span>
-
-                        </div>
-
-                    </article>
-
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-
-                        <div class="user_info">
-                            <h1 class="user_name">Лиза</h1>
-                        </div>
-
-
-                        <div class="twit_date">17.02.2022 18:05</div>
-                        <p>Вот вам яркий пример современных тенденций - семантический разбор внешних
-                            противодействий
-                            обеспечивает широкому кругу (специалистов) участие в формировании инновационных
-                            методов управления
-                            процессами.</p>
-
-
-
-                        <div class="twit_footer">
-
-                            <div class="twit_comment">
-                                <a href="#">
-                                    <img src="images/chat.svg" alt="chat">
-                                </a>
-                                <span class="twit_comment_number">2</span>
-                            </div>
-
-                        </div>
-
-                    </article>
-
-                    <!-- -------- twit -->
-
-                    <article class="twit">
-
-                        <div class="user_info">
-                            <h1 class="user_name">Капитан</h1>
-                        </div>
-
-
-                        <div class="twit_date">17.02.2022 9:22</div>
-                        <p><span>#развитие</span> Высокий уровень
-                            вовлечения представителей целевой аудитории является четким доказательством простого
-                            факта:
-                            разбавленное изрядной долей эмпатии, рациональное мышление играет определяющее
-                            значение для позиций,
-                            занимаемых участниками в отношении поставленных задач.</p>
-
-
-
-                        <div class="twit_footer">
-
-                            <div class="twit_comment">
-                                <a href="#">
-                                    <img src="images/chat.svg" alt="chat">
-                                </a>
-                                <span class="twit_comment_number">4</span>
-                            </div>
-                        </div>
-
-                    </article>
-
-                    <!-- -------- Feed end -->
+                        <!-- -------- Feed -->
 
                 </section>
 
@@ -453,7 +141,10 @@
 
 
     </div>
-
+    <script src="/UI/script/list.js"></script>
+    <script src="/UI/script/globalMetods.js"></script>
+    <script src="/UI/script/headerView.js"></script>
+    <script src="/UI/script/mainView.js"></script>
 
 
 </body>
