task5.add extra1

--- a/Extra tasks/5.1/calendar.html
+++ b/Extra tasks/5.1/calendar.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extra Task #5.1</title>
+    <title>Title</title>
     <style>
         table {
             text-align: center;
         }
 
-        tr:first-child,
-        tr:nth-child(2) {
+        tr:first-child {
             font-weight: bold;
             background-color: #dfdfdf;
         }
@@ -22,5 +21,5 @@
 <body>
     <div id="calendar"></div>
 </body>
-<script src="/extra/task1/calendar.js"></script>
+<script src="/Extra tasks/5.1/calendar.js"></script>
 </html>
