task5. add export

--- a/UI/main.html
+++ b/UI/main.html
@@ -141,10 +141,16 @@
 
 
     </div>
-    <script src="/UI/script/list.js"></script>
-    <script src="/UI/script/globalMetods.js"></script>
-    <script src="/UI/script/headerView.js"></script>
-    <script src="/UI/script/mainView.js"></script>
+
+    <script type="module" src="/UI/script/tweetcollection.js"></script>
+    <script type="module" src="/UI/script/globalMetods.js"></script>
+    <script type="module" src="/UI/script/tweet.js"></script>
+    <script type="module" src="/UI/script/comment.js"></script>
+    <script type="module" src="/UI/script/tweetbase.js"></script>
+    <script type="module" src="/UI/script/headerView.js"></script>
+    <script type="module" src="/UI/script/tweetView.js"></script>
+    <script type="module" src="/UI/script/commentsView.js"></script>
+    <script type="module" src="/UI/script/mainView.js"></script>
 
 
 </body>
