--- a/UI/twit.html
+++ b/UI/twit.html
@@ -77,6 +77,7 @@
     <script src="/UI/script/headerView.js"></script>
     <script src="/UI/script/mainView.js"></script>
     <script src="/UI/script/tweetView.js"></script>
+    <script src="/UI/script/commentsView.js"></script>
 
 </body>
 
