task5.add webpack

--- a/UI/main.html
+++ b/UI/main.html
@@ -74,10 +74,10 @@
 
                             <button class="selector_name">Дата</button>
                             <ul class="list_filter">
-                                <li>От:<input class="date_input" type="date" value="2022-2-22" />
+                                <li>От:<input class="date_input" type="date" value="2022-02-22" />
                                 </li>
                                 <hr>
-                                <li>До:<input class="date_input" type="date" value="2022-2-22" /></li>
+                                <li>До:<input class="date_input" type="date" value="2022-02-22" /></li>
                             </ul>
                         </form>
 
@@ -141,16 +141,16 @@
 
 
     </div>
-
-    <script type="module" src="/UI/script/tweetcollection.js"></script>
-    <script type="module" src="/UI/script/globalMetods.js"></script>
-    <script type="module" src="/UI/script/tweet.js"></script>
-    <script type="module" src="/UI/script/comment.js"></script>
-    <script type="module" src="/UI/script/tweetbase.js"></script>
-    <script type="module" src="/UI/script/headerView.js"></script>
-    <script type="module" src="/UI/script/tweetView.js"></script>
-    <script type="module" src="/UI/script/commentsView.js"></script>
-    <script type="module" src="/UI/script/mainView.js"></script>
+    <script src='./dist/bundle.js'></script>
+    <!-- <script type="module" src="./scr/tweetcollection.js"></script>$ ./node_modules/.bin/webpack
+    <script type="module" src="./scr/globalMetods.js"></script>
+    <script type="module" src="./scr/tweet.js"></script>
+    <script type="module" src="./scr/comment.js"></script>
+    <script type="module" src="./scr/tweetbase.js"></script>
+    <script type="module" src="./scr/headerView.js"></script>
+    <script type="module" src="./scr/tweetView.js"></script>
+    <script type="module" src="./scr/commentsView.js"></script>
+    <script type="module" src="./scr/mainView.js"></script> -->
 
 
 </body>
