--- a/UI/twit.html
+++ b/UI/twit.html
@@ -72,12 +72,14 @@
 
     </div>
 
-    <script src="/UI/script/list.js"></script>
+    
+    <script src='./dist/bundle.js'></script>
+    <!-- <script src="/UI/script/list.js"></script>
     <script src="/UI/script/globalMetods.js"></script>
     <script src="/UI/script/headerView.js"></script>
     <script src="/UI/script/mainView.js"></script>
     <script src="/UI/script/tweetView.js"></script>
-    <script src="/UI/script/commentsView.js"></script>
+    <script src="/UI/script/commentsView.js"></script> -->
 
 </body>
 
