task5.syntax fixes

--- a/UI/index.html
+++ b/UI/index.html
@@ -147,7 +147,7 @@
 
     </div>
 
-    <script src="scripts/tweetbase.js"></script>
+    <script src="scripts/tweetBase.js"></script>
     <script src="scripts/tweet.js"></script>
     <script src="scripts/comment.js"></script>
     <script src="scripts/tweetCollection.js"></script>
@@ -155,7 +155,7 @@
     <script src="scripts/feedView.js"></script>
     <script src="scripts/filterView.js"></script>
     <script src="scripts/tweetView.js"></script>
-    <script src="scripts/globalMetods.js"></script>
+    <script src="scripts/globalMethods.js"></script>
 </body>
 
 </html>
