--- a/UI/index.html
+++ b/UI/index.html
@@ -53,7 +53,7 @@
 
                     <!-- -------- twit -->
                     <div id="tweet">
-                        <!-- <p class="load_more selector_name"> Нет твиттов </p> -->
+                        <p class="none" id="show_filter"> Нет ни одной записи </p>
                     </div>
 
                     <!-- -------- Feed -->
