--- a/UI/index.html
+++ b/UI/index.html
@@ -85,14 +85,14 @@
     </div>
 
     <script src="scripts/tweetBase.js"></script>
-    <script src="scripts/tweet.js"></script>
+    <script type="module" src="./scripts/tweet.js"></script>
     <script src="scripts/comment.js"></script>
-    <script src="scripts/tweetCollection.js"></script>
+    <script type="module" src="./scripts/tweetCollection.js"></script>
     <script src="scripts/headerView.js"></script>
     <script src="scripts/feedView.js"></script>
     <script src="scripts/filterView.js"></script>
     <script src="scripts/tweetView.js"></script>
-    <script src="scripts/globalMethods.js"></script>
+    <script type="module" src="./scripts/globalMethods.js"></script>
 </body>
 
 </html>
