--- a/UI/index.html
+++ b/UI/index.html
@@ -22,7 +22,7 @@
 
         <header>
             <div class="header_container">
-                <a href="#" class="logo_link">
+                <a href="index.html" class="logo_link">
                     <img src="images/logo.svg" class="logo" alt="chitchat">
                 </a>
 
@@ -38,8 +38,8 @@
 
             <div class="main_container">
                 <!-- -------- New Twit -->
-                <div id="write_area" class="twit_write_area"> </div>
-
+                <div id="write_area"></div>
+                
 
 
                 <nav id="inputs" class="filter_items">
@@ -92,7 +92,9 @@
     <script src="scripts/feedView.js"></script>
     <script src="scripts/filterView.js"></script>
     <script src="scripts/tweetView.js"></script>
-    <script src="scripts/globalMethods.js"></script>
+    <script src="scripts/userList.js"></script>
+    <!-- <script src="scripts/globalMethods.js"></script> -->
+    <script src="scripts/tweetsController.js"></script>
 </body>
 
 </html>
