task6.add controller file

--- a/Extra tasks/6.2/index.html
+++ b/Extra tasks/6.2/index.html
@@ -12,19 +12,19 @@
     <button id="new">Начать новую игру</button>
     <table>
         <tr>
-            <td id="0"></td>
-            <td id="1"></td>
-            <td id="2"></td>
+            <td class="empty" id="0"></td>
+            <td class="empty" id="1"></td>
+            <td class="empty" id="2"></td>
         </tr>
         <tr>
-            <td id="3"></td>
-            <td id="4"></td>
-            <td id="5"></td>
+            <td class="empty" id="3"></td>
+            <td class="empty" id="4"></td>
+            <td class="empty" id="5"></td>
         </tr>
         <tr>
-            <td id="6"></td>
-            <td id="7"></td>
-            <td id="8"></td>
+            <td class="empty" id="6"></td>
+            <td class="empty" id="7"></td>
+            <td class="empty" id="8"></td>
         </tr>
     </table>
 </body>
